Updated README_FUZZ